# multirotor_trajectory

./: CMakeLists.txt  README.md  package.xml
include/multirotor_trajectory/: Physics.h  Polynomial.hpp  TrajectoryGenerator.cpp  Types.h
include/pauvsi_trajectory/: Config.h  Physics.h  Polynomial.h  Polynomial.hpp  Simulation.h  TrajectoryGenerator.cpp  TrajectoryGenerator.h  Types.h
launch/: simulation.launch
matlab/TrajectoryGenerator/: calculateActuatorFeasibility.m  calculateMaximums.m  final_trajectory.fig  generateTrajectory.m  get9DegPolyMatrix.m  initial_trajectory.fig  minimumTimeTrajectoryGenerator.m  polynomialTrajectorySolver.m  trajectoryPlotter.m
src/: README.md  trajectory_server.cpp  virtual-flight-controller.cpp
srv/: trajectoryGeneration.srv
test/: traj_test.cpp  unit_test.cpp
urdf/: m7_robot.urdf
